--- a/donors/index.html
+++ b/donors/index.html
@@ -57,14 +57,14 @@
 
     <footer>
         <div class="contact">
-            <a href="https://www.instagram.com/makeitgreeniq/"><img src="./public-imgs/instagram-colourful-icon.png"
+            <a href="https://www.instagram.com/makeitgreeniq/"><img src="../imgs/instagram-colourful-icon.png"
                     alt=""></a>
             email: makeitgreeniq@gmail.com
         </div>
 
     </footer>
 
-    <script src="./donors.js"></script>
+    <script src="./donors.js" type="module"></script>
 </body>
 
 </html>
