--- a/admin/index.html
+++ b/admin/index.html
@@ -10,10 +10,17 @@
 </head>
 
 <body>
-
     <div class="logged">
         <header>
+            <div class="logo"></div>
+            <div class="contentLinks">
+                <a href="/https://bygreen-v.herokuapp.com">map project</a>
+                <a href="./donors">donors</a>
+                <a href="./blog">blog</a>
+            </div>
         </header>
+
+
         <main>
             <div class="blog-making">
                 <h2>make post (article) </h2>
@@ -37,6 +44,12 @@
             </div>
         </main>
         <footer>
+            <div class="contact">
+                <a href="https://www.instagram.com/makeitgreeniq/"><img src="../imgs/instagram-colourful-icon.png"
+                        alt=""></a>
+                email: makeitgreeniq@gmail.com
+            </div>
+
         </footer>
 
     </div>
@@ -46,6 +59,8 @@
         <input type="text" id="pw">
         <button id="signin"> sign in</button>
     </div>
+
+
 
     <script src="./admin.js" type="module"></script>
 </body>
