--- a/donors/index.html
+++ b/donors/index.html
@@ -15,8 +15,8 @@
         <div class="logo"></div>
         <div class="contentLinks">
             <a href="/https://bygreen-v.herokuapp.com">map project</a>
-            <a href="./donors.html">donors</a>
-            <a href="./blog.html">blog</a>
+            <a href="./donors">donors</a>
+            <a href="./blog">blog</a>
         </div>
     </header>
 
