--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
         <div class="logo"></div>
         <div class="contentLinks">
-            <a href="/https://bygreen-v.herokuapp.com">map project</a>
+            <a href="https://bygreen-fb-ex.onrender.com/">map project</a>
             <a href="/donors">donors</a>
             <a href="/blog">blog</a>
         </div>
@@ -34,7 +34,7 @@
     <main>
 
         <div class="map">
-            <a href="https://bygreen-v.herokuapp.com" target="_blank">check map</a>
+            <a href="https://bygreen-fb-ex.onrender.com/" target="_blank">check map</a>
             <div id="map"></div>
             <div class="map-statics">
                 <p class="title">map statics</p>
